--- a/package.json
+++ b/package.json
@@ -8,9 +8,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "@types/node": "^17.0.8",
+    "@types/react": "^17.0.38",
+    "antd": "^4.18.3",
+    "antd-mask-input": "^0.1.15",
+    "axios": "^0.24.0",
     "next": "12.0.7",
+    "nookies": "^2.5.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-promise-tracker": "^2.1.0",
+    "styled-components": "^5.3.3",
+    "typescript": "^4.5.4"
   },
   "devDependencies": {
     "eslint": "8.6.0",
