--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
-    "@types/node": "^17.0.8",
+    "@types/node": "^17.0.9",
     "@types/react": "^17.0.38",
     "antd": "^4.18.3",
     "antd-mask-input": "^0.1.15",
@@ -21,6 +21,7 @@
     "react-dom": "17.0.2",
     "react-promise-tracker": "^2.1.0",
     "styled-components": "^5.3.3",
+    "swr": "^1.1.2",
     "typescript": "^4.5.4"
   },
   "devDependencies": {
