--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typescript": "^4.5.4"
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.20",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7"
   }
